<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BLEMaster</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="title_devices">BLEMaster</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="action_settings">Settings</string>
    <string name="unknown_device">未知设备</string>

    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="label_device_address">地址：</string>
    <string name="label_data">开关数据：</string>
    
    
        <!-- Menu items -->
    <string name="menu_connect">连接</string>
    <string name="menu_disconnect">断开连接</string>
    <string name="menu_scan">搜索</string>
    <string name="menu_stop">停止</string>
            
        <!-- Button items -->
    <string name="button_ON">开</string>
    <string name="button_OFF">关</string>
</resources>
